--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,18 @@ dependencies:
   intl: ^0.19.0
   loading_animation_widget: ^1.2.1
   smooth_page_indicator: ^1.2.0+3
+  flutter_typeahead: ^3.2.0
+  floor: ^1.5.0
+  internet_connection_checker_plus: ^2.5.1
+
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logoApp.jpg"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
