--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,17 +90,25 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: AsliMedium
+      fonts:
+        - asset: assets/fonts/yekan_bakh/YekanBakhRegular.ttf
+
+    - family: AsliBold
+      fonts:
+        - asset: assets/fonts/yekan_bakh/YekanBakhBold.ttf
+
+    - family: AsliLight
+      fonts:
+        - asset: assets/fonts/yekan_bakh/YekanBakhLight.ttf
+
+    - family: AsliRegular
+      fonts:
+        - asset: assets/fonts/yekan_bakh/YekanBakhRegular.ttf
+
+    - family: AsliExtraLight
+      fonts:
+        - asset: assets/fonts/yekan_bakh/YekanBakhThin.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
